--- a/index.html
+++ b/index.html
@@ -1,131 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gianluca Cersosimo | Power BI Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #343a40;
-        }
-        .navbar {
-            background-color: #0047ab;
-        }
-        .navbar-brand, .nav-link {
-            color: white !important;
-        }
-        .hero-section {
-            text-align: center;
-            padding: 50px 20px;
-            background-color: #0047ab;
-            color: white;
-        }
-        .card img {
-            height: 200px;
-            object-fit: cover;
-        }
-        .contact-section {
-            background-color: #343a40;
-            color: white;
-            padding: 30px 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #0047ab;
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gianluca Cersosimo - Power BI Portfolio</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">My Power BI Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <!-- Welcome Section -->
+  <h1>Welcome to My Power BI Portfolio! 🎉</h1>
+  <p>Hello! I'm <strong>Gianluca Cersosimo</strong>, a Financial Analyst and Power BI enthusiast. This website showcases my interactive dashboards and analytics projects.</p>
+  <hr>
 
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <h1>Welcome to My Power BI Portfolio! 🎉</h1>
-        <p>Hello! I'm <strong>Gianluca Cersosimo</strong>, a Financial Analyst and Power BI enthusiast. This website showcases my interactive dashboards and analytics projects.</p>
-    </section>
+  <!-- Featured Projects Section -->
+  <h2>📊 Featured Projects</h2>
 
-    <!-- Projects Section -->
-    <section id="projects" class="container my-5">
-        <h2 class="text-center mb-4">📊 Featured Projects</h2>
-        <div class="row g-4">
-            <!-- Project 1 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="Captura%20Lista%20de%20Ventas.png" class="card-img-top" alt="Used Car Sales Dashboard">
-                    <div class="card-body">
-                        <h5 class="card-title">Used Car Sales and Sellers' Performance</h5>
-                        <p class="card-text">Analyzing sales performance across regions, products, and teams.</p>
-                        <a href="https://app.powerbi.com/reportEmbed?reportId=5db2dac0-3a7a-4628-97f1-07a93d17d0b6" class="btn btn-primary" target="_blank">View Dashboard</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Project 2 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="WUP.png" class="card-img-top" alt="Financial Analysis Report">
-                    <div class="card-body">
-                        <h5 class="card-title">Financial Analysis Report</h5>
-                        <p class="card-text">Tracking revenue, expenses, and profitability over time.</p>
-                        <a href="https://app.powerbi.com/reportEmbed?reportId=75e2a1f9-a3cf-4c84-ba37-f4895bc85253" class="btn btn-primary" target="_blank">View Dashboard</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Project 3 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/800x400.png" class="card-img-top" alt="Customer Insights Dashboard">
-                    <div class="card-body">
-                        <h5 class="card-title">Customer Insights Dashboard</h5>
-                        <p class="card-text">Insights into customer demographics, behaviors, and satisfaction.</p>
-                        <a href="https://app.powerbi.com/yourdashboardlink" class="btn btn-primary" target="_blank">View Dashboard</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-<!-- About Section -->
-    <section id="about" class="container my-5">
-        <h2 class="text-center mb-4">🌟 About Me</h2>
-        <p class="text-center">
-            🎓 M.S. in Finance and Financial Analytics, University of New Haven.<br>
-            📈 Experienced in creating data-driven insights and visualizations.<br>
-            💼 Freelance data solutions provider.
-        </p>
-    </section>
-    
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <h2 class="text-center">📬 Contact Me</h2>
-        <p class="text-center">📧 <a href="mailto:gianlucacerso@gmail.com" class="text-white">gianlucacerso@gmail.com</a></p>
-        <p class="text-center">💼 <a href="https://www.linkedin.com/in/gianluca-cersosimo-0410191aa/" class="text-white">LinkedIn</a></p>
-    </section>
+  <h3>1. Used Car Sales and Sellers' Performance Dashboard</h3>
+  <p><strong>Description:</strong> A dashboard analyzing sales performance across regions, products, and teams.</p>
+  <p><strong>Tools:</strong> Power BI, DAX, SQL</p>
+  <p><strong>Highlights:</strong> Drill-through capabilities, KPI tracking.</p>
+  <img src="Captura%20Lista%20de%20Ventas.png" alt="Dashboard Screenshot">
+  <iframe title="Lista de Ventas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=5db2dac0-3a7a-4628-97f1-07a93d17d0b6&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
 
-    <!-- Footer -->
-    <footer>
-        © 2024 Gianluca Cersosimo | Built with Bootstrap
-    </footer>
+  <h3>2. Financial Analysis Report</h3>
+  <p><strong>Description:</strong> A financial report for tracking revenue, expenses, and profitability over time.</p>
+  <p><strong>Tools:</strong> Power BI, Excel</p>
+  <p><strong>Highlights:</strong> Trend analysis, dynamic filters.</p>
+  <img src="WUP.png" alt="Dashboard Screenshot">
+  <iframe title="WUP Budget Report" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=75e2a1f9-a3cf-4c84-ba37-f4895bc85253&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <h3>3. Customer Insights Dashboard</h3>
+  <p><strong>Description:</strong> Insights into customer demographics, behaviors, and satisfaction.</p>
+  <p><strong>Tools:</strong> Power BI, R</p>
+  <p><strong>Highlights:</strong> Heatmaps, demographic segmentation.</p>
+  <img src="https://via.placeholder.com/800x400.png" alt="Dashboard Screenshot">
+  <a href="https://app.powerbi.com/yourdashboardlink">View Interactive Dashboard</a>
+  <hr>
+
+  <!-- About Me Section -->
+  <h2>🌟 About Me</h2>
+  <ul>
+    <li>🎓 M.S. in Finance and Financial Analytics, University of New Haven.</li>
+    <li>📈 Experienced in creating data-driven insights and visualizations.</li>
+    <li>💼 Freelance data solutions provider.</li>
+  </ul>
+  <hr>
+
+  <!-- Contact Me Section -->
+  <h2>📬 Contact Me</h2>
+  <p>📧 Email: <a href="mailto:gianlucacerso@gmail.com">gianlucacerso@gmail.com</a></p>
+  <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/gianluca-cersosimo-0410191aa/" target="_blank">linkedin.com/in/giancerso</a></p>
+  <p>🌐 Website: <a href="https://giancerso.github.io" target="_blank">Gianluca's Analytics</a></p>
 </body>
 </html>
