--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <p><strong>Description:</strong> Insights into customer demographics, behaviors, and satisfaction.</p>
   <p><strong>Tools:</strong> Power BI, R</p>
   <p><strong>Highlights:</strong> Heatmaps, demographic segmentation.</p>
-  <img src="https://via.placeholder.com/800x400.png" alt="Dashboard Screenshot">
-  <a href="https://app.powerbi.com/yourdashboardlink">View Interactive Dashboard</a>
-  <hr>
+  <img src="Captura%20de%20pantalla%202024-11-19%20133352.png" alt="Dashboard Screenshot">
+  <iframe title="WUP Budget Report" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=66c029b2-a6df-46ea-9e0a-3f94e892a293&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
 
   <!-- About Me Section -->
   <h2>🌟 About Me</h2>
