--- a/index.html
+++ b/index.html
@@ -3,46 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gianluca   
- Cersosimo - Power BI Portfolio</title>
-  <style>
-    /* Add CSS styles for the navigation bar here */
-  </style>
+  <title>Gianluca Cersosimo - Power BI Portfolio</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#featured-projects">Featured Projects</a></li>
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#contact-me">Contact Me</a></li>
-    </ul>
-  </nav>
+  <!-- Welcome Section -->
+  <h1>Welcome to My Power BI Portfolio! 🎉</h1>
+  <p>Hello! I'm <strong>Gianluca Cersosimo</strong>, a Financial Analyst and Power BI enthusiast. This website showcases my interactive dashboards and analytics projects.</p>
+  <hr>
 
-  <section id="welcome">
-    <h1>Welcome to My Power BI Portfolio! </h1>
-    <p>Hello! I'm <strong>Gianluca Cersosimo</strong>, a Financial Analyst and Power BI enthusiast. This website showcases my interactive dashboards and analytics projects.</p>
-    <hr>
-  </section>
+  <!-- Featured Projects Section -->
+  <h2>📊 Featured Projects</h2>
 
-  <section id="featured-projects">
-    <h2> Featured Projects</h2>
-    </section>
+  <h3>1. Used Car Sales and Sellers' Performance Dashboard</h3>
+  <p><strong>Description:</strong> A dashboard analyzing sales performance across regions, products, and teams.</p>
+  <p><strong>Tools:</strong> Power BI, DAX, SQL</p>
+  <p><strong>Highlights:</strong> Drill-through capabilities, KPI tracking.</p>
+  <img src="Captura%20Lista%20de%20Ventas.png" alt="Dashboard Screenshot">
+  <iframe title="Lista de Ventas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=5db2dac0-3a7a-4628-97f1-07a93d17d0b6&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
 
-  <section id="about-me">
-    <h2> About Me</h2>
-    <ul>
-      <li> M.S. in Finance and Financial Analytics, University of New Haven.</li>
-      <li> Experienced in creating data-driven insights and visualizations.</li>
-      <li> Freelance data solutions provider.</li>
-    </ul>
-    <hr>
-  </section>
+  <h3>2. Financial Analysis Report</h3>
+  <p><strong>Description:</strong> A financial report for tracking revenue, expenses, and profitability over time.</p>
+  <p><strong>Tools:</strong> Power BI, Excel</p>
+  <p><strong>Highlights:</strong> Trend analysis, dynamic filters.</p>
+  <img src="WUP.png" alt="Dashboard Screenshot">
+  <iframe title="WUP Budget Report" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=75e2a1f9-a3cf-4c84-ba37-f4895bc85253&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
 
-  <section id="contact-me">
-    <h2> Contact Me</h2>
-    <p> Email: <a href="mailto:gianlucacerso@gmail.com">gianlucacerso@gmail.com</a></p>
-    <p> LinkedIn: <a href="https://www.linkedin.com/in/gianluca-cersosimo-0410191aa/" target="_blank">linkedin.com/in/giancerso</a></p>
-    <p> Website: <a href="https://giancerso.github.io" target="_blank">Gianluca's Analytics</a></p>
-  </section>
+  <h3>3. Customer Insights Dashboard</h3>
+  <p><strong>Description:</strong> Insights into customer demographics, behaviors, and satisfaction.</p>
+  <p><strong>Tools:</strong> Power BI, R</p>
+  <p><strong>Highlights:</strong> Heatmaps, demographic segmentation.</p>
+  <img src="Captura%20de%20pantalla%202024-11-19%20133352.png" alt="Customer Insights Dashboard Screenshot">
+  <iframe title="Restaurant Orders" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=66c029b2-a6df-46ea-9e0a-3f94e892a293&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
+  <hr>
+
+  <!-- About Me Section -->
+  <h2>🌟 About Me</h2>
+  <ul>
+    <li>🎓 M.S. in Finance and Financial Analytics, University of New Haven.</li>
+    <li>📈 Experienced in creating data-driven insights and visualizations.</li>
+    <li>💼 Freelance data solutions provider.</li>
+  </ul>
+  <hr>
+
+  <!-- Contact Me Section -->
+  <h2>📬 Contact Me</h2>
+  <p>📧 Email: <a href="mailto:gianlucacerso@gmail.com">gianlucacerso@gmail.com</a></p>
+  <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/gianluca-cersosimo-0410191aa/" target="_blank">linkedin.com/in/giancerso</a></p>
+  <p>🌐 Website: <a href="https://giancerso.github.io" target="_blank">Gianluca's Analytics</a></p>
 </body>
 </html>
