--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
       background: #f9f9f9;
     }
 
+    /* Reduce Screenshot Size */
     .project img {
-      max-width: 100%;
+      max-width: 33%; /* Scales down the image to 1/3 of its original size */
+      display: block; /* Ensures it doesn’t overflow */
+      margin: 0 auto; /* Centers the image */
       border-radius: 10px;
     }
 
@@ -103,3 +106,4 @@
   <p>🌐 Website: <a href="https://giancerso.github.io" target="_blank">Gianluca's Analytics</a></p>
 </body>
 </html>
+
