--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gianluca Cersosimo - Power BI Portfolio</title>
   <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      background-color: #05122d; /* Set background color */
+      color: #ffffff; /* Set text color for contrast */
+    }
+
+    h1, h2, h3 {
+      text-align: center;
+      color: #ffffff;
+    }
+
+    p, ul, li {
+      color: #d1d1d1; /* Softer white for better readability */
+    }
+
     /* Flexbox for Horizontal Layout */
     .projects-container {
       display: flex;
@@ -13,16 +31,16 @@
     }
 
     .project {
-      flex: 1 1 calc(33.33% - 20px); /* Makes each project take 1/3 of the row (adjust for 2 or 4 projects) */
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      flex: 1 1 calc(33.33% - 20px); /* Makes each project take 1/3 of the row */
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
       border-radius: 10px;
       padding: 15px;
-      background: #f9f9f9;
+      background: #0a1a3f; /* Card background color */
     }
 
     /* Reduce Screenshot Size */
     .project img {
-      max-width: 33%; /* Scales down the image to 1/3 of its original size */
+      max-width: 50%; /* Scales down the image to 50% of its original size */
       display: block; /* Ensures it doesn’t overflow */
       margin: 0 auto; /* Centers the image */
       border-radius: 10px;
@@ -34,18 +52,21 @@
       border-radius: 10px;
     }
 
-    h2, h3 {
-      text-align: center;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-    }
-
     .projects-container h3 {
       margin-top: 0;
+    }
+
+    hr {
+      border-color: #ffffff; /* White separator lines */
+    }
+
+    a {
+      color: #66ccff; /* Light blue links */
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
