--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="projects-container">
     <!-- Project 1 -->
     <div class="project">
-      <h3>1. Used Car Sales and Sellers' Performance Dashboard</h3>
+      <h3>1. Used Car Sales Performance Dashboard</h3>
       <p><strong>Description:</strong> A dashboard analyzing sales performance across regions, products, and teams.</p>
       <p><strong>Tools:</strong> Power BI, DAX, SQL</p>
       <p><strong>Highlights:</strong> Drill-through capabilities, KPI tracking.</p>
@@ -91,7 +91,7 @@
 
     <!-- Project 2 -->
     <div class="project">
-      <h3>2. Financial Analysis Report</h3>
+      <h3>2. WUP Financial Analysis Report</h3>
       <p><strong>Description:</strong> A financial report for tracking revenue, expenses, and profitability over time.</p>
       <p><strong>Tools:</strong> Power BI, Excel</p>
       <p><strong>Highlights:</strong> Trend analysis, dynamic filters.</p>
@@ -101,9 +101,9 @@
 
     <!-- Project 3 -->
     <div class="project">
-      <h3>3. Customer Insights Dashboard</h3>
-      <p><strong>Description:</strong> Insights into customer demographics, behaviors, and satisfaction.</p>
-      <p><strong>Tools:</strong> Power BI, R</p>
+      <h3>3. Restaurant Orders Insights</h3>
+      <p><strong>Description:</strong> Insights into restaurant orders, categories, times and days.</p>
+      <p><strong>Tools:</strong> Power BI, SQL</p>
       <p><strong>Highlights:</strong> Heatmaps, demographic segmentation.</p>
       <img src="Captura%20de%20pantalla%202024-11-19%20133352.png" alt="Customer Insights Dashboard Screenshot">
       <iframe title="Restaurant Orders" src="https://app.powerbi.com/reportEmbed?reportId=66c029b2-a6df-46ea-9e0a-3f94e892a293&autoAuth=true&ctid=3c71cbab-b5ed-4f3b-ac0d-95509d6c0e93" frameborder="0" allowFullScreen="true"></iframe>
