--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <p><strong>Tools:</strong> Power BI, DAX, SQL</p>
       <p><strong>Highlights:</strong> Drill-through capabilities, KPI tracking.</p>
       <img src="Captura%20Lista%20de%20Ventas.png" alt="Dashboard Screenshot">
-      </div>
+    </div>
 
     <!-- Project 2 -->
     <div class="project">
@@ -95,7 +95,7 @@
       <p><strong>Tools:</strong> Power BI, Excel</p>
       <p><strong>Highlights:</strong> Trend analysis, dynamic filters.</p>
       <img src="WUP.png" alt="Dashboard Screenshot">
-      </div>
+    </div>
 
     <!-- Project 3 -->
     <div class="project">
@@ -104,7 +104,17 @@
       <p><strong>Tools:</strong> Power BI, SQL</p>
       <p><strong>Highlights:</strong> Heatmaps, demographic segmentation.</p>
       <img src="Captura%20de%20pantalla%202024-11-19%20133352.png" alt="Customer Insights Dashboard Screenshot">
-      </div>
+    </div>
+
+    <!-- Project 4 -->
+    <div class="project">
+      <h3>4. Walmart Sales Analysis</h3>
+      <p><strong>Description:</strong> A detailed analysis of Walmart sales data, exploring product lines, sales trends, and customer ratings.</p>
+      <p><strong>Tools:</strong> Power BI, Excel, SQL</p>
+      <p><strong>Highlights:</strong> Product performance insights, customer satisfaction trends, and sales breakdowns by categories.</p>
+      <img src="Captura%20de%20pantalla%202024-11-19%20210950.png" alt="Walmart Sales Analysis Dashboard Screenshot">
+    </div>
+  </div>
   <hr>
 
   <!-- About Me Section -->
@@ -123,4 +133,3 @@
   <p>🌐 Website: <a href="https://giancerso.github.io" target="_blank">Gianluca's Analytics</a></p>
 </body>
 </html>
-
